# HW-dpcpp-2.2

./: .gitignore  CMakeLists.txt
include/: VeryHeavyDatabase.hpp  main.hpp
src/: VeryHeavyDatabase.cpp  main.cpp
